[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "copart-discovery"
version = "0.1.0"
description = "Async vehicle lot discovery engine for the Copart public API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27.0",
    "redis[asyncio]>=5.0.0",
    "tenacity>=8.2.3",
    "python-json-logger>=3.0.0",
    "playwright>=1.52.0",
]

[project.scripts]
copart-discovery = "main:main"

[project.optional-dependencies]
dev = [
    "fakeredis>=2.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line-length (handled by formatter)
    "BLE001", # blind except – used intentionally in error-handling paths
]

[tool.ruff.lint.isort]
known-first-party = ["discovery_engine"]
